# nimi

./: .gitignore  404.html  Cargo.toml  LICENSE.md  README.md  book.toml  cli.html  config-data.html  container.html  default.nix  flake-module.html  flake.nix  functions.html  home-module.html  index.html  logging.html  nixos-module.html  options.html  overlay.html  print.html  sandbox.html  searcher-c2a407aa.js  searchindex-460b66ca.js  searchindex-5d5ddd57.js  searchindex-7af21c92.js  searchindex-967c7f6f.js  searchindex-e32065de.js  shell.nix  toc.html
.github/workflows/: gh-pages-pr-preview.yml  gh-pages.yml
docs/: SUMMARY.md  cli.md  config-data.md  container.md  flake-module.md  home-module.md  index.md  logging.md  nixos-module.md  options.md  overlay.md  sandbox.md
examples/: config-data.nix  container.nix  ghostunnel.nix  sandboxed.nix  startup-script.nix
nimi/: assertions.nix  bin-name.nix  container.nix  logging.nix  meta.nix  passthru.nix  restart.nix  startup.nix
nix/: docs.nix  eval-nimi-module.nix  eval-services-config.nix  flake-module.nix  formatter.nix  home-module.nix  lib.nix  mk-container-image.nix  mk-nimi-bin.nix  mk-wrapper.nix  nimi-module.nix  nixos-module.nix  package.nix  to-nimi-json.nix
nix/checks/: config-data-is-accessible.nix  is-formatted.nix  log-files-are-created-properly.nix  nixos-module-runs.nix  restart-runs-n-times.nix  sandbox-environment.nix
nix/dev/: devshell.nix  systems.nix
nix/modules/: assertions.nix  flake-parts.nix  nimi.nix  (+3 more)
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  process_manager.rs  subreaper.rs
(+127 files in other folders)
