[dependencies]
clap = {version = "4.5.53", features = ["derive"]}
color-eyre = "0.6.5"
env_logger = "0.11.8"
eyre = "0.6.12"
format_serde_error = "0.3.0"
log = "0.4.29"
serde = {version = "1.0.228", features = ["serde_derive"]}
serde_json = "1.0.148"
tokio = {version = "1.48.0", features = ["full"]}

[package]
name = "nimi"
version = "0.1.0"
edition = "2024"
